# clip-video-search

./: .gitignore  Makefile  README.md  pyproject.toml
scripts/: app.py  index_builder.py
src/embedder/: __init__.py
src/indexer/: __init__.py
